<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>OverAid</class>
 <widget class="QMainWindow" name="OverAid">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1798</width>
    <height>960</height>
   </rect>
  </property>
  <property name="focusPolicy">
   <enum>Qt::StrongFocus</enum>
  </property>
  <property name="windowTitle">
   <string>OverAid</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QGridLayout" name="gridLayout_7">
    <property name="leftMargin">
     <number>15</number>
    </property>
    <property name="topMargin">
     <number>0</number>
    </property>
    <property name="rightMargin">
     <number>15</number>
    </property>
    <property name="bottomMargin">
     <number>15</number>
    </property>
    <item row="1" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="tabShape">
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
       <number>0</number>
      </property>
      <widget class="QWidget" name="tabAccount">
       <attribute name="title">
        <string>Transactions</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout">
        <property name="leftMargin">
         <number>10</number>
        </property>
        <property name="topMargin">
         <number>0</number>
        </property>
        <property name="rightMargin">
         <number>10</number>
        </property>
        <property name="bottomMargin">
         <number>10</number>
        </property>
        <item row="2" column="2">
         <widget class="QLabel" name="label_prevision">
          <property name="font">
           <font>
            <bold>true</bold>
           </font>
          </property>
          <property name="text">
           <string>Solde futur :</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
         <widget class="QLabel" name="label_reste">
          <property name="font">
           <font>
            <bold>true</bold>
           </font>
          </property>
          <property name="text">
           <string>Solde : </string>
          </property>
         </widget>
        </item>
        <item row="1" column="1" colspan="2">
         <widget class="QTreeWidget" name="treeWidgetSummary">
          <property name="minimumSize">
           <size>
            <width>750</width>
            <height>0</height>
           </size>
          </property>
          <property name="alternatingRowColors">
           <bool>true</bool>
          </property>
          <property name="sortingEnabled">
           <bool>false</bool>
          </property>
          <attribute name="headerCascadingSectionResizes">
           <bool>false</bool>
          </attribute>
          <column>
           <property name="text">
            <string notr="true">1</string>
           </property>
          </column>
         </widget>
        </item>
        <item row="0" column="0" rowspan="3">
         <widget class="QWidget" name="widgetTrans" native="true">
          <property name="minimumSize">
           <size>
            <width>400</width>
            <height>0</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
            <width>400</width>
            <height>16777215</height>
           </size>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabStats">
       <attribute name="title">
        <string>Statistiques</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
        <property name="leftMargin">
         <number>10</number>
        </property>
        <property name="topMargin">
         <number>0</number>
        </property>
        <property name="rightMargin">
         <number>10</number>
        </property>
        <property name="bottomMargin">
         <number>10</number>
        </property>
        <item row="0" column="0">
         <widget class="QLabel" name="labelStats_date">
          <property name="maximumSize">
           <size>
            <width>16777215</width>
            <height>30</height>
           </size>
          </property>
          <property name="text">
           <string/>
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QLabel" name="labelStats_montant">
          <property name="maximumSize">
           <size>
            <width>16777215</width>
            <height>30</height>
           </size>
          </property>
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
        <item row="1" column="0" colspan="2">
         <layout class="QGridLayout" name="gridLayout_stats"/>
        </item>
       </layout>
      </widget>
     </widget>
    </item>
    <item row="0" column="1" rowspan="2">
     <widget class="QPlainTextEdit" name="plainTextEdit_debug">
      <property name="minimumSize">
       <size>
        <width>300</width>
        <height>0</height>
       </size>
      </property>
      <property name="focusPolicy">
       <enum>Qt::NoFocus</enum>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item row="0" column="0">
     <widget class="QGroupBox" name="groupBox_filtre">
      <property name="enabled">
       <bool>true</bool>
      </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
        <height>110</height>
       </size>
      </property>
      <property name="font">
       <font>
        <kerning>true</kerning>
       </font>
      </property>
      <property name="focusPolicy">
       <enum>Qt::TabFocus</enum>
      </property>
      <property name="title">
       <string>Filtres</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
      <property name="flat">
       <bool>false</bool>
      </property>
      <property name="checkable">
       <bool>true</bool>
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
       <property name="leftMargin">
        <number>10</number>
       </property>
       <property name="topMargin">
        <number>5</number>
       </property>
       <property name="rightMargin">
        <number>10</number>
       </property>
       <property name="bottomMargin">
        <number>5</number>
       </property>
       <item row="0" column="4" rowspan="3">
        <widget class="Line" name="line">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
        </widget>
       </item>
       <item row="3" column="5">
        <spacer name="horizontalSpacer_4">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>0</height>
          </size>
         </property>
        </spacer>
       </item>
       <item row="0" column="5" rowspan="3">
        <widget class="QWidget" name="widget" native="true">
         <layout class="QGridLayout" name="gridLayout_4">
          <property name="leftMargin">
           <number>0</number>
          </property>
          <property name="topMargin">
           <number>0</number>
          </property>
          <property name="rightMargin">
           <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
          <item row="0" column="1">
           <layout class="QGridLayout" name="gridLayout_5">
            <item row="0" column="15">
             <spacer name="horizontalSpacer_2">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeType">
               <enum>QSizePolicy::Minimum</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>10</width>
                <height>20</height>
               </size>
              </property>
             </spacer>
            </item>
            <item row="0" column="5">
             <spacer name="horizontalSpacer">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeType">
               <enum>QSizePolicy::Minimum</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>20</height>
               </size>
              </property>
             </spacer>
            </item>
            <item row="0" column="8">
             <spacer name="horizontalSpacer_6">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeType">
               <enum>QSizePolicy::Minimum</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>20</height>
               </size>
              </property>
             </spacer>
            </item>
            <item row="1" column="16">
             <widget class="QPushButton" name="pushButtonFiltre_valide">
              <property name="maximumSize">
               <size>
                <width>42</width>
                <height>16777215</height>
               </size>
              </property>
              <property name="text">
               <string>✓</string>
              </property>
             </widget>
            </item>
            <item row="1" column="6">
             <widget class="QLabel" name="label_2">
              <property name="text">
               <string>Date de fin :</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
            <item row="0" column="9" colspan="2">
             <widget class="QLineEdit" name="lineEditFiltre_desc">
              <property name="minimumSize">
               <size>
                <width>75</width>
                <height>0</height>
               </size>
              </property>
              <property name="whatsThis">
               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;'%' remplace une chaîne de caractère&lt;/p&gt;&lt;p&gt;'_' remplace un seul caractère&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
              <property name="placeholderText">
               <string>Description</string>
              </property>
              <property name="clearButtonEnabled">
               <bool>true</bool>
              </property>
             </widget>
            </item>
            <item row="1" column="9" colspan="2">
             <widget class="QLineEdit" name="lineEditFiltre_projet">
              <property name="minimumSize">
               <size>
                <width>75</width>
                <height>0</height>
               </size>
              </property>
              <property name="whatsThis">
               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;'%' remplace une chaîne de caractère&lt;/p&gt;&lt;p&gt;'_' remplace un seul caractère&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
              <property name="placeholderText">
               <string>Projet</string>
              </property>
              <property name="clearButtonEnabled">
               <bool>true</bool>
              </property>
             </widget>
            </item>
            <item row="0" column="4">
             <widget class="QPushButton" name="pushButtonFiltre_cat">
              <property name="text">
               <string>Catégories</string>
              </property>
             </widget>
            </item>
            <item row="1" column="14">
             <widget class="QComboBox" name="comboBoxFiltre_modeSaisie">
              <property name="maximumSize">
               <size>
                <width>200</width>
                <height>16777215</height>
               </size>
              </property>
              <item>
               <property name="text">
                <string>Tout</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>Manuel</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>Abonnement</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>Import en masse</string>
               </property>
              </item>
             </widget>
            </item>
            <item row="0" column="3">
             <spacer name="horizontalSpacer_3">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeType">
               <enum>QSizePolicy::Minimum</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>20</height>
               </size>
              </property>
             </spacer>
            </item>
            <item row="1" column="7">
             <widget class="QDateEdit" name="dateEditFilter_end">
              <property name="dateTime">
               <datetime>
                <hour>12</hour>
                <minute>0</minute>
                <second>0</second>
                <year>2100</year>
                <month>12</month>
                <day>31</day>
               </datetime>
              </property>
              <property name="displayFormat">
               <string>dd MMM yyyy</string>
              </property>
              <property name="date">
               <date>
                <year>2100</year>
                <month>12</month>
                <day>31</day>
               </date>
              </property>
             </widget>
            </item>
            <item row="0" column="16">
             <widget class="QPushButton" name="pushButtonFiltre_delete">
              <property name="maximumSize">
               <size>
                <width>42</width>
                <height>16777215</height>
               </size>
              </property>
              <property name="text">
               <string>✕</string>
              </property>
             </widget>
            </item>
            <item row="0" column="2">
             <widget class="QComboBox" name="comboBoxFiltre_inOut">
              <item>
               <property name="text">
                <string>Tout</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>Débit</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>Crédit</string>
               </property>
              </item>
             </widget>
            </item>
            <item row="1" column="4">
             <widget class="QPushButton" name="pushButtonFiltre_cat2">
              <property name="text">
               <string>Sous-catégories</string>
              </property>
             </widget>
            </item>
            <item row="0" column="11">
             <spacer name="horizontalSpacer_5">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeType">
               <enum>QSizePolicy::Minimum</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>20</height>
               </size>
              </property>
             </spacer>
            </item>
            <item row="0" column="6">
             <widget class="QLabel" name="label">
              <property name="text">
               <string>Date de début :</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
            <item row="0" column="7">
             <widget class="QDateEdit" name="dateEditFilter_start">
              <property name="dateTime">
               <datetime>
                <hour>12</hour>
                <minute>0</minute>
                <second>0</second>
                <year>1900</year>
                <month>1</month>
                <day>1</day>
               </datetime>
              </property>
              <property name="time">
               <time>
                <hour>12</hour>
                <minute>0</minute>
                <second>0</second>
               </time>
              </property>
              <property name="displayFormat">
               <string>dd MMM yyyy</string>
              </property>
              <property name="date">
               <date>
                <year>1900</year>
                <month>1</month>
                <day>1</day>
               </date>
              </property>
             </widget>
            </item>
            <item row="0" column="1">
             <widget class="QLabel" name="label_5">
              <property name="text">
               <string>Débit / Crédit</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
            <item row="0" column="13">
             <widget class="QLabel" name="label_6">
              <property name="text">
               <string>Moyen de paiement :</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
            <item row="1" column="1">
             <widget class="QLabel" name="label_3">
              <property name="text">
               <string>Devise :</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
            <item row="1" column="13">
             <widget class="QLabel" name="label_7">
              <property name="text">
               <string>Mode de saisie :</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
            <item row="0" column="14">
             <widget class="QComboBox" name="comboBoxFiltre_moyen">
              <property name="placeholderText">
               <string/>
              </property>
              <item>
               <property name="text">
                <string>Tout</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>Carte bancaire</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>Virement</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>Espèces</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>Chèque</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>Prélèvement</string>
               </property>
              </item>
             </widget>
            </item>
            <item row="1" column="2">
             <widget class="QComboBox" name="comboBoxFiltre_devise">
              <property name="maximumSize">
               <size>
                <width>200</width>
                <height>16777215</height>
               </size>
              </property>
             </widget>
            </item>
           </layout>
          </item>
         </layout>
        </widget>
       </item>
       <item row="0" column="3" rowspan="3">
        <layout class="QGridLayout" name="gridLayout_6">
         <item row="0" column="2">
          <widget class="QLabel" name="label_idSavedFilter">
           <property name="text">
            <string>id_filter</string>
           </property>
          </widget>
         </item>
         <item row="1" column="0" colspan="3">
          <widget class="QComboBox" name="comboBox_savedFilters">
           <property name="maximumSize">
            <size>
             <width>200</width>
             <height>16777215</height>
            </size>
           </property>
          </widget>
         </item>
         <item row="0" column="0" colspan="2">
          <widget class="QLabel" name="label_4">
           <property name="maximumSize">
            <size>
             <width>16777215</width>
             <height>16777215</height>
            </size>
           </property>
           <property name="text">
            <string>Filtres sauvegardés :</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1798</width>
     <height>24</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuG_rer">
    <property name="title">
     <string>Gérer</string>
    </property>
    <widget class="QMenu" name="menuComptes">
     <property name="title">
      <string>Comptes</string>
     </property>
     <addaction name="separator"/>
     <addaction name="actionGerer_les_comptes"/>
    </widget>
    <widget class="QMenu" name="menuLangage">
     <property name="title">
      <string>Langage</string>
     </property>
     <addaction name="actionFran_ais"/>
     <addaction name="actionAnglais"/>
     <addaction name="actionEspagnol"/>
    </widget>
    <addaction name="menuComptes"/>
    <addaction name="menuLangage"/>
    <addaction name="separator"/>
    <addaction name="actionCat_gories"/>
    <addaction name="actionAbonnements"/>
    <addaction name="separator"/>
    <addaction name="actionAfficher_le_d_bugger"/>
   </widget>
   <widget class="QMenu" name="menuFichier">
    <property name="title">
     <string>Fichier</string>
    </property>
    <addaction name="actionImporter_une_base_de_donn_es"/>
    <addaction name="actionSauvegarder_la_base_de_donn_es"/>
    <addaction name="separator"/>
    <addaction name="actionExporter_au_format_CSV"/>
    <addaction name="actionExporter_les_PDF_en_ZIP"/>
    <addaction name="separator"/>
    <addaction name="actionImport_en_masse"/>
    <addaction name="separator"/>
    <addaction name="action_about"/>
    <addaction name="actionFermer"/>
   </widget>
   <addaction name="menuFichier"/>
   <addaction name="menuG_rer"/>
  </widget>
  <action name="actionGerer_les_comptes">
   <property name="text">
    <string>Gérer les comptes</string>
   </property>
  </action>
  <action name="actionCat_gories">
   <property name="text">
    <string>Catégories</string>
   </property>
  </action>
  <action name="actionFran_ais">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>false</bool>
   </property>
   <property name="icon">
    <iconset resource="ressource.qrc">
     <normaloff>:/qrc/ressources/image/flag_france.png</normaloff>:/qrc/ressources/image/flag_france.png</iconset>
   </property>
   <property name="text">
    <string>Français</string>
   </property>
  </action>
  <action name="actionAnglais">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="ressource.qrc">
     <normaloff>:/qrc/ressources/image/flag_usa.png</normaloff>:/qrc/ressources/image/flag_usa.png</iconset>
   </property>
   <property name="text">
    <string>Anglais</string>
   </property>
  </action>
  <action name="actionFermer">
   <property name="text">
    <string>Fermer</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+W</string>
   </property>
   <property name="menuRole">
    <enum>QAction::TextHeuristicRole</enum>
   </property>
  </action>
  <action name="actionExporter_au_format_CSV">
   <property name="text">
    <string>Exporter au format CSV</string>
   </property>
  </action>
  <action name="actionSauvegarder_la_base_de_donn_es">
   <property name="text">
    <string>Sauvegarder la base de données</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+S</string>
   </property>
  </action>
  <action name="actionExporter_les_PDF_en_ZIP">
   <property name="text">
    <string>Télécharger tous les PDF</string>
   </property>
  </action>
  <action name="actionAbonnements">
   <property name="text">
    <string>Abonnements</string>
   </property>
  </action>
  <action name="actionEspagnol">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset>
     <normalon>:/qrc/ressources/image/flag_spain.png</normalon>
    </iconset>
   </property>
   <property name="text">
    <string>Espagnol</string>
   </property>
  </action>
  <action name="actionAfficher_le_d_bugger">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Afficher le débugger</string>
   </property>
  </action>
  <action name="action_about">
   <property name="text">
    <string>À propos</string>
   </property>
   <property name="menuRole">
    <enum>QAction::AboutRole</enum>
   </property>
  </action>
  <action name="actionImporter_une_base_de_donn_es">
   <property name="text">
    <string>Importer une base de données</string>
   </property>
  </action>
  <action name="actionImport_en_masse">
   <property name="text">
    <string>Import en masse</string>
   </property>
  </action>
 </widget>
 <tabstops>
  <tabstop>tabWidget</tabstop>
  <tabstop>treeWidgetSummary</tabstop>
 </tabstops>
 <resources>
  <include location="ressource.qrc"/>
 </resources>
 <connections/>
</ui>
